// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assumption actions should create addAssumption action with snapshot 1`] = `
Object {
  "payload": Object {
    "assumption": Object {
      "assumptionTypeId": 1,
      "isInitialValue": 0,
      "percentage": 20,
      "period": "2018-04",
      "userId": 1,
    },
  },
  "type": "CREATE_ASSUMPTION",
}
`;

exports[`assumption actions should create setAssumption action with snapshot 1`] = `
Object {
  "payload": Array [
    Object {
      "id": 1,
      "name": "Poduszka bezpieczeństwa",
      "percentage": 20,
      "value": 66.6,
    },
    Object {
      "id": 2,
      "name": "Wakacje",
      "percentage": 10,
      "value": 33.3,
    },
    Object {
      "id": 3,
      "name": "Wakacje",
      "percentage": 50,
      "value": 695,
    },
  ],
  "type": "READ_ASSUMPTION",
}
`;

exports[`assumption actions should create setOverallAssumptiona action with snapshot 1`] = `
Object {
  "payload": Array [
    Object {
      "name": "Poduszka bezpieczeństwa",
      "value": 66.6,
    },
    Object {
      "name": "Wakacje",
      "value": 33.3,
    },
    Object {
      "name": "Wakacje",
      "value": 695,
    },
  ],
  "type": "READ_OVERALL_ASSUMPTIONS",
}
`;

exports[`drag actions it should create resetDraggedAssumptionType action with a snapshot 1`] = `
Object {
  "type": "RESET_ASSUMPTION_TYPES",
}
`;

exports[`drag actions it should create selectAssumptionType action with a snapshot 1`] = `
Object {
  "payload": Object {
    "type": undefined,
  },
  "type": "REDUCE_ASSUMPTION_TYPES",
}
`;
